fix viewport issues on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@ body {
   margin: 0;
   font-family: 'Quicksand', sans-serif;
   color: white;
+  overflow: hidden;
 }
 
 h1,
